--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
       <!-- PEDAL -->
       <article class="pedal">
-        <img src="public/assets/pedals/AkhetGate2.PNG" alt="AKHET GATE" />
+        <img src="public/assets/pedals/AkhetGate.jpg" alt="AKHET GATE" />
 
         <h2 class="pedal-name">AKHET GATE</h2>
         <p class="pedal-mood">
