--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <!-- PEDAL -->
       <article class="pedal">
-        <img src="public/assets/pedals/Khepridrive.jpg" alt="KHEPRI DRIVE" />
+        <img src="public/assets/pedals/Khepridrive.jpeg" alt="KHEPRI DRIVE" />
 
         <h2 class="pedal-name">KHEPRI DRIVE</h2>
         <p class="pedal-mood">
@@ -73,7 +73,7 @@
 
       <!-- PEDAL -->
       <article class="pedal">
-        <img src="public/assets/pedals/AkhetGate.jpg" alt="AKHET GATE" />
+        <img src="public/assets/pedals/AkhetGate.jpeg" alt="AKHET GATE" />
 
         <h2 class="pedal-name">AKHET GATE</h2>
         <p class="pedal-mood">
@@ -99,7 +99,7 @@
 
       <!-- PEDAL -->
       <article class="pedal">
-        <img src="public/assets/pedals/SphinxFace.jpg" alt="SPHINX FACE (Germanium)" />
+        <img src="public/assets/pedals/SphinxFace.jpeg" alt="SPHINX FACE (Germanium)" />
 
         <h2 class="pedal-name">SPHINX FACE</h2>
         <p class="pedal-mood">
